// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns the expected query for multiple ids 1`] = `
"SELECT DISTINCT
CPH.CPH CPH_ID,
'ACTIVE' CPH_HOLDERSHIP_ACTIVE,
CPH_TYPE,
la.la_name,
la.la_number
FROM
AHBRP.CPH,
AHBRP.FEATURE_INVOLVEMENT FI,
AHBRP.LOCATION,
AHBRP.FEATURE_STATE FS,
AHBRP.PARTY_ROLE PR,
AHBRP.PARTY,
AHBRP.PARTY_STATE PS,
(
select
ref_data_code_desc.short_Description la_name,
ref_data_Code.code la_number,
ref_data_code_1.code
from
AHBRP.ref_data_Set_map,
AHBRP.ref_data_code_map,
AHBRP.ref_data_code,
AHBRP.ref_data_code ref_data_code_1,
AHBRP.ref_data_Code_desc
where
REF_DATA_SET_MAP.REF_DATA_SET_MAP_PK = REF_DATA_CODE_MAP.REF_DATA_SET_MAP_PK
and
REF_DATA_SET_MAP.EFFECTIVE_TO_DATE = '31/DEC/9999'
AND
REF_DATA_SET_MAP.REF_DATA_SET_MAP_NAME = 'LOCAL_AUTHORITY_COUNTY_PARISH'
AND
REF_DATA_CODE_MAP.FROM_REF_DATA_CODE_PK = REF_DATA_CODE.REF_DATA_CODE_PK
and
REF_DATA_CODE_MAP.EFFECTIVE_TO_DATE = '31/DEC/9999'
AND
REF_DATA_CODE.REF_DATA_CODE_PK = REF_DATA_CODE_DESC.REF_DATA_CODE_PK
AND
REF_DATA_CODE.EFFECTIVE_TO_DATE= '31/DEC/9999'
and
REF_DATA_CODE_MAP.TO_REF_DATA_CODE_PK = REF_DATA_CODE_1.REF_DATA_CODE_PK
and
REF_DATA_CODE_1.EFFECTIVE_TO_DATE = '31/DEC/9999'
) la

WHERE
CPH.CPH = FI.CPH
AND
FI.FEATURE_PK = LOCATION.FEATURE_PK
AND
FI.FEATURE_PK = FS.FEATURE_PK
AND
FI.FEATURE_INVOLVEMENT_TYPE = 'CPHHOLDERSHIP'
AND
FI.FEATURE_INVOLV_TO_DATE IS NULL
AND
FS.FEATURE_STATUS_CODE <> 'INACTIVE'
AND
FS.FEATURE_STATE_TO_DTTM IS NULL
AND
FI.PARTY_ROLE_PK = PR.PARTY_ROLE_PK
AND
PR.PARTY_PK = PARTY.PARTY_PK
AND
PR.PARTY_ROLE_TO_DATE IS NULL
AND
PARTY.PARTY_PK = PS.PARTY_PK
AND
PS.PARTY_STATUS_CODE <> 'INACTIVE'
AND
PS.PARTY_STATE_TO_DTTM IS NULL
AND
SUBSTR(CPH.CPH,1,6) = la.CODE(+)
AND
CPH.CPH IN ('11/111/1111', '22/222/2222')
"
`;

exports[`returns the expected query for valid parameters 1`] = `
"SELECT DISTINCT
CPH.CPH CPH_ID,
'ACTIVE' CPH_HOLDERSHIP_ACTIVE,
CPH_TYPE,
la.la_name,
la.la_number
FROM
AHBRP.CPH,
AHBRP.FEATURE_INVOLVEMENT FI,
AHBRP.LOCATION,
AHBRP.FEATURE_STATE FS,
AHBRP.PARTY_ROLE PR,
AHBRP.PARTY,
AHBRP.PARTY_STATE PS,
(
select
ref_data_code_desc.short_Description la_name,
ref_data_Code.code la_number,
ref_data_code_1.code
from
AHBRP.ref_data_Set_map,
AHBRP.ref_data_code_map,
AHBRP.ref_data_code,
AHBRP.ref_data_code ref_data_code_1,
AHBRP.ref_data_Code_desc
where
REF_DATA_SET_MAP.REF_DATA_SET_MAP_PK = REF_DATA_CODE_MAP.REF_DATA_SET_MAP_PK
and
REF_DATA_SET_MAP.EFFECTIVE_TO_DATE = '31/DEC/9999'
AND
REF_DATA_SET_MAP.REF_DATA_SET_MAP_NAME = 'LOCAL_AUTHORITY_COUNTY_PARISH'
AND
REF_DATA_CODE_MAP.FROM_REF_DATA_CODE_PK = REF_DATA_CODE.REF_DATA_CODE_PK
and
REF_DATA_CODE_MAP.EFFECTIVE_TO_DATE = '31/DEC/9999'
AND
REF_DATA_CODE.REF_DATA_CODE_PK = REF_DATA_CODE_DESC.REF_DATA_CODE_PK
AND
REF_DATA_CODE.EFFECTIVE_TO_DATE= '31/DEC/9999'
and
REF_DATA_CODE_MAP.TO_REF_DATA_CODE_PK = REF_DATA_CODE_1.REF_DATA_CODE_PK
and
REF_DATA_CODE_1.EFFECTIVE_TO_DATE = '31/DEC/9999'
) la

WHERE
CPH.CPH = FI.CPH
AND
FI.FEATURE_PK = LOCATION.FEATURE_PK
AND
FI.FEATURE_PK = FS.FEATURE_PK
AND
FI.FEATURE_INVOLVEMENT_TYPE = 'CPHHOLDERSHIP'
AND
FI.FEATURE_INVOLV_TO_DATE IS NULL
AND
FS.FEATURE_STATUS_CODE <> 'INACTIVE'
AND
FS.FEATURE_STATE_TO_DTTM IS NULL
AND
FI.PARTY_ROLE_PK = PR.PARTY_ROLE_PK
AND
PR.PARTY_PK = PARTY.PARTY_PK
AND
PR.PARTY_ROLE_TO_DATE IS NULL
AND
PARTY.PARTY_PK = PS.PARTY_PK
AND
PS.PARTY_STATUS_CODE <> 'INACTIVE'
AND
PS.PARTY_STATE_TO_DTTM IS NULL
AND
SUBSTR(CPH.CPH,1,6) = la.CODE(+)
AND
CPH.CPH IN ('11/111/1111')
"
`;
